--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 		<script src="bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="bower_components/bootstrapvalidator/dist/js/bootstrapValidator.min.js"></script>
+		<script src="bower_components/headroom.js/dist/headroom.min.js"></script> 
 		<script src="bower_components/owl-carousel2/dist/owl.carousel.min.js"></script>
 		<script src="dist/js/bootaide.min.js"></script>
 
