--- a/index.html
+++ b/index.html
@@ -99,6 +99,78 @@
 			</div>
 		</section>
 
+	  	<section class="p-v-xl bg-light">
+		  <div class="container">
+		    <div class="row">
+		      <div class="col-sm-12 m-b-xl">
+		        <h1 class="text-dark">Working Portfolio</h1>
+		        <p class="">Panic stuff all over the world. Here is some!</p>
+		        <div class="line-xl w-xs b-b b-4x b-danger b-lter"></div>
+		      </div> 
+
+		      <div class="col-md-3">
+						<a href='https://eservice.boi.gov.bd'>
+							<div class="item text-center img-bg img-info dker text-white" style="height: 315px; background-image: url(imgs/d14.jpg);">
+								<div class="top w-full p-h-xxl p-v-lg">
+									<h5 class="text-dark">BIDA eService Portal for Investor</h5>
+									<div class="line line-lg b-b b-white w-3x m-auto"></div>
+									<p class="text-dark">
+										The Investor eService is web-based application for investors to receive Visa Recommendation Letter, Visa On arrival letter, Work Permit through online.
+									</p>
+								</div>						
+							</div>
+						</a>
+					</div>
+						<div class="col-md-3">
+						<a href='https://mohascs.org/'>
+							<div class="item text-center img-bg img-warning dker text-white" style="height: 315px; background-image: url(imgs/d0.jpg);">
+								<div class="top w-full p-h-xxl p-v-lg">
+									<h5 class="text-dark">Ministry of Home Affairs</h5>
+									<div class="line line-lg b-b b-white w-3x m-auto"></div>
+									<p class="text-dark">
+										At vero eos et accusamus 
+										et iusto odio dignissimos 
+										ducimus qui blanditiis
+									</p>
+								</div>							
+							</div>
+						</a>
+					</div>
+				<div class="col-md-3">
+						<a href='https://bcsir.eserve.org.bd/'>
+							<div class="item text-center img-bg img-success dker text-white" style="height: 315px; background-image: url(imgs/d14.jpg);">
+								<div class="top w-full p-h-xxl p-v-lg">
+									<h5 class="text-dark">Bangladesh Council of Scientific and Industrial Research</h5>
+									<div class="line line-lg b-b b-white w-3x m-auto"></div>
+									<p class="text-dark">
+										At vero eos et accusamus 
+										et iusto odio dignissimos 
+										ducimus qui blanditiis
+									</p>
+								</div>						
+							</div>
+						</a>
+					</div>
+						<div class="col-md-3">
+						<a href='https://play.google.com/store/apps/details?id=computer_jagat.munzurul'>
+							<div class="item text-center img-bg img-primary dker text-white" style="height: 315px; background-image: url(imgs/d0.jpg);">
+								<div class="top w-full p-h-xxl p-v-lg">
+									<h5 class="text-dark">Computer Jagat Monthly Magazine (Mobile Version)</h5>
+									<div class="line line-lg b-b b-white w-3x m-auto"></div>
+									<p class="text-dark">
+										At vero eos et accusamus 
+										et iusto odio dignissimos 
+										ducimus qui blanditiis
+									</p>
+								</div>						
+							</div>
+						</a>
+					</div>
+				  
+		    </div>
+		  </div>
+		</section>
+
         <section class="separator">
 			<div class="decor-svg">
 				<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
