--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="no-js">
 	<head>
 		<meta charset="utf-8">
-		<title>Personal web</title>
+		<title>khaledasabina.github.io</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width">
 		<link rel="shortcut icon" href="/favicon.ico">
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css" />
 		<link rel="stylesheet" href="bower_components/animate.css/animate.min.css" />
 	    <link rel="stylesheet" href="bower_components/font-awesome/css/font-awesome.min.css" />
+	    <link rel="stylesheet" href="bower_components/simple-line-icons/css/simple-line-icons.css" />
 	    <link rel="stylesheet" href="bower_components/owl-carousel2/dist/assets/owl.carousel.min.css" />
         <link rel="stylesheet" href="bower_components/owl-carousel2/dist/assets/owl.theme.default.min.css" />
 		<link rel="stylesheet" href="dist/css/bootaide.min.css" />
@@ -102,10 +103,11 @@
 	  	<section class="p-v-xl bg-light">
 		  <div class="container">
 		    <div class="row">
-		      <div class="col-sm-12 m-b-xl">
-		        <h1 class="text-dark">Working Portfolio</h1>
-		        <p class="">Panic stuff all over the world. Here is some!</p>
-		        <div class="line-xl w-xs b-b b-4x b-danger b-lter"></div>
+		      <div class="col-sm-8 col-sm-offset-2 text-center p-v m-v-xl">
+		      	<i class="icon-paper-plane text-4x"></i>
+		        <h1 class="text-dark">Magical Work Done</h1>
+		        <p class="">some awesome magical work we've done!</p>
+		        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 		      </div> 
 
 		      <div class="col-md-3">
