--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 						</a>
 					</div>
 						<div class="col-md-3">
-						<a href='https://play.google.com/store/apps/details?id=computer_jagat.munzurul'>
+						<a href='https://m.comjagat.com'>
 							<div class="item text-center img-bg img-primary dker text-white" style="height: 315px; background-image: url(imgs/d0.jpg);">
 								<div class="top w-full p-h-xxl p-v-lg">
 									<h5 class="text-dark">Computer Jagat Monthly Magazine (Mobile Version)</h5>
