--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<div class="text-lg m-t">
 							<a class="m-r-sm" href=""><i class="fa fa-twitter"></i></a>
 							<a class="m-r-sm" href=""><i class="fa fa-facebook"></i></a>
-							<a class="m-r-sm" href=""><i class="fa fa-codepen"></i></a>
+							<a class="m-r-sm" href="http://about.me/imsabina"><i class="fa fa-codepen"></i></a>
 							<a class="m-r-sm" href=""><i class="fa fa-dribbble"></i></a>
 							<a href=""><i class="fa fa-github"></i></a>
 						</div>
