--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                                                 <h3 class="h3 font-semi-bold text-danger>  KHALEDA BINTAY KHALEQUE  </h3>
 						<h3 class="m-t-lg l-h-1x text-info">Software Engineer</h3>
 						<div class="text-lg m-t">
-							<a class="m-r-sm" href=""><i class="fa fa-twitter"></i></a>
+							<a class="m-r-sm" href="http://twitter.com/seagirlsabo"><i class="fa fa-twitter"></i></a>
 							<a class="m-r-sm" href=""><i class="fa fa-facebook"></i></a>
 							<a class="m-r-sm" href="http://about.me/imsabina"><i class="fa fa-codepen"></i></a>
 							<a class="m-r-sm" href=""><i class="fa fa-dribbble"></i></a>
