--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 				<div class="row p-v m-t-md text-center">
 					
 					<p class="m-b-none">
-						Build with <i class="fa fa-heart-o m-h-5x"></i> by <a href="https://about.me/imsabina" target="_blank"> Musammat Samina (Khaleda Bintay Khaleque)</a>
+						Build with <i class="fa fa-heart-o m-h-5x"></i> by <a href="https://about.me/imsabina" target="_blank"> Musammat Samina. Daughter of Al-hajj Md. Abdul Khalek and Mst. Sufia Begum.</a>
 					</p>
 					<p>
 						2018 &copy; Bootaide
