--- a/index.html
+++ b/index.html
@@ -25,10 +25,12 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-8 col-sm-offset-2 text-center m-t-lg">
-						<h1 class="h1 font-semi-bold text-danger"> মোসাম্মত সামিনা</h1>
+						<h1 class="h1 font-semi-bold text-danger"> মোসাম্মত সামিনা ( مسمت سمينة )</h1>
                                                 <h3 class="h3 font-semi-bold text-danger>  MUSAMMAT SAMINA  </h3>
 						<h3 class="m-t-lg l-h-1x text-info">Software Engineer</h3>
-						<div class="text-lg m-t">
+						<h4 class="m-t-lg l-h-1x text-info">আলহাজ্ব মোঃ আব্দুল খালেক এবং মিসেস সুফিয়া বেগম,বাড়ি ৩৫, রোড ০৩, ব্লক সি, সেকশন ১২, পল্লবী, ঢাকা ১২১৬</h4>
+						
+                                                <div class="text-lg m-t">
 							<a class="m-r-sm" href="http://twitter.com/seagirlsabo"><i class="fa fa-twitter"></i></a>
 							<a class="m-r-sm" href=""><i class="fa fa-facebook"></i></a>
 							<a class="m-r-sm" href="http://about.me/imsabina"><i class="fa fa-codepen"></i></a>
