--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-8 col-sm-offset-2 text-center m-t-lg">
-						<h1 class="h1 font-semi-bold text-danger"> মোসাম্মত সামিনা ( مسمت سمينة )</h1>
+						<h1 class="h1 font-semi-bold text-danger"> মোসাম্মত সামিনা </br>( مسمت سمينة )</h1>
                                                 <h3 class="h3 font-semi-bold text-danger>  MUSAMMAT SAMINA  </h3>
 						<h3 class="m-t-lg l-h-1x text-info">Software Engineer</h3>
 						<h4 class="m-t-lg l-h-1x text-info">আলহাজ্ব মোঃ আব্দুল খালেক এবং মিসেস সুফিয়া বেগম,বাড়ি ৩৫, রোড ০৩, ব্লক সি, সেকশন ১২, পল্লবী, ঢাকা ১২১৬</h4>
