--- a/index.html
+++ b/index.html
@@ -55,10 +55,16 @@
 		<section class="p-v-xl bg-light">
 			<div class="container">
 			<div class="row">
+                                <div class="col-sm-8 col-sm-offset-2 text-center p-v m-v-xl">
+		      	<i class="icon-paper-plane text-4x"></i>
+		        <h1 class="text-dark">আলহাজ্ব মোঃ আব্দুল খালেক এবং মিসেস সুফিয়া বেগম,বাড়ি ৩৫, রোড ০৩, ব্লক সি, সেকশন ১২, পল্লবী, ঢাকা ১২১৬  </h1>
+		        <p class=""></p>
+		        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
+		      </div
 				<div class="col-sm-8 col-sm-offset-2">
 					<div class="row m-b-xxl">
 									<div class="col-sm-3">
-                                                                                <h4 class="m-t-lg l-h-1x text-info">আলহাজ্ব মোঃ আব্দুল খালেক এবং মিসেস সুফিয়া বেগম,বাড়ি ৩৫, রোড ০৩, ব্লক সি, সেকশন ১২, পল্লবী, ঢাকা ১২১৬</h4>
+                                                                                
 			                                                        <h4 class="font-thin m-b-none">Work Experience</h4>
 										<p>4 years</p>
 									</div>
@@ -92,8 +98,16 @@
 										<h5 class="text-dark">Daffodil International University</h5>
 										<p class="b-l b-light b-dker text-base p-l-sm m-l">
 											M.Sc in Computer Science and Engineering 
-											<small class="clear">2015</small>
+											<small class="clear">111-25-199 [2013]</small>
 										</p>
+                                                                                <p class="b-l b-light b-dker text-base p-l-sm m-l">
+											B.Sc in Computer Science and Engineering 
+											<small class="clear">061-15-475 [2009]</small>
+										</p>
+									</div>
+                                                                        <div class="m-b-xl">
+										<h5 class="text-dark"></h5>
+										
 									</div>
 								</div>
 							</div>
