--- a/index.html
+++ b/index.html
@@ -25,16 +25,16 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-8 col-sm-offset-2 text-center m-t-lg">
-						<h1 class="h1 font-semi-bold text-danger"> মোসাম্মত সামিনা </br>( مسمت سمينة )</h1>
+						<h1 class="h1 font-semi-bold text-danger"> মোসাম্মত সামিনা </br>( مسمت سمين)</h1>
                                                 <h3 class="h3 font-semi-bold text-danger>  MUSAMMAT SAMINA  </h3>
-						<h3 class="m-t-lg l-h-1x text-info">Software Engineer</h3>
+						<h3 class="m-t-lg l-h-1x text-info">Software Engineer | Programmer | Publisher </h3>
 							
                                                 <div class="text-lg m-t">
-							<a class="m-r-sm" href="http://twitter.com/seagirlsabo"><i class="fa fa-twitter"></i></a>
-							<a class="m-r-sm" href=""><i class="fa fa-facebook"></i></a>
-							<a class="m-r-sm" href="http://about.me/imsabina"><i class="fa fa-codepen"></i></a>
-							<a class="m-r-sm" href=""><i class="fa fa-dribbble"></i></a>
-							<a href=""><i class="fa fa-github"></i></a>
+							<a class="m-r-sm" href="https://twitter.com/seagirlsabo"><i class="fa fa-twitter"></i></a>
+							<a class="m-r-sm" href="https://facebook.com/musammat.samina"><i class="fa fa-facebook"></i></a>
+							<a class="m-r-sm" href="http://about.me/imsamina"><i class="fa fa-codepen"></i></a>
+							<a class="m-r-sm" href="https://www.linkedin.com/in/musammatsamina-47577222"><i class="fa fa-dribbble"></i></a>
+							<a href="https://github.com/musammatsamina"><i class="fa fa-github"></i></a>
 						</div>
 					</div>
 				</div>
