--- a/index.html
+++ b/index.html
@@ -189,10 +189,10 @@
 				<div class="row p-v m-t-md text-center">
 					
 					<p class="m-b-none">
-						Build with <i class="fa fa-heart-o m-h-5x"></i> by <a href="https://about.me/imsabina" target="_blank"> Musammat Samina. Daughter of Al-hajj Md. Abdul Khalek and Mst. Sufia Begum.</a>
+						Build with <i class="fa fa-heart-o m-h-5x"></i> by <a href="https://facebook.com/musammat.samina" target="_blank"> Musammat Samina. Daughter of Al-hajj Md. Abdul Khalek and Mst. Sufia Begum.</a>
 					</p>
 					<p>
-						2018 &copy; Bootaide
+						2017 &copy; Bootaide
 					</p>
 				</div>
 			</div>
