--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 										<div class="b-l b-2x p-l-xl m-b-lg">
 											<div class="m-b-xl">
 												<h5 class="text-dark m-b-none">PHP Developer <small> at </small> <a class="text-primary" href="">OCPL ( a sister concern of Business Automation Limited )</a></h5>
-												<p>2014-2016</p>
+												<p>June 2014 to June 2017</p>
 												<p class="b-l b-light b-dker text-base p-l-sm m-l">
 													Ministry of Home Affairs
 													<a class="small clear">http://www.mohascs.org/</a>
@@ -88,7 +88,7 @@
                                                                                 <div class="b-l b-2x p-l-xl m-b-lg">
 											<div class="m-b-xl">
 												<h5 class="text-dark m-b-none"> Junior Software Developer <small> at </small> <a class="text-primary" href=""> Comjagat Technologies Limited </a></h5>
-												<p>2014-2016</p>
+												<p> February 2011 to February 2013</p>
 												<p class="b-l b-light b-dker text-base p-l-sm m-l">
 													...........
 													<a class="small clear">http://</a>
@@ -104,7 +104,7 @@
                                                                                 <div class="b-l b-2x p-l-xl m-b-lg">
 											<div class="m-b-xl">
 												<h5 class="text-dark m-b-none"> Executive <small> at </small> <a class="text-primary" href=""> Banglalion Communication Limited </a></h5>
-												<p>2014-2016</p>
+												<p> January 2011 to February 2011</p>
 												<p class="b-l b-light b-dker text-base p-l-sm m-l">
 										                        .........
 													<a class="small clear">http://</a>
