--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<div class="row m-b-xxl">
 									<div class="col-sm-3">
                                                                                 
-			                                                        <h4 class="font-thin m-b-none">Work Experience</h4>
+			                                                        <h4 class="font-thin m-b-xl">Work Experience</h4>
 										<p>4 years</p>
 									</div>
 									<div class="col-sm-9">
