--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 					</div>
 					<div class="row">
 							<div class="col-sm-3">
-								<h4 class="font-thin m-b-none">Education</h4>
+								<h4 class="font-thin m-b-xl">Education</h4>
 								<p>post graduate</p>
 							</div>
 							<div class="col-sm-9">
