--- a/index.html
+++ b/index.html
@@ -63,10 +63,12 @@
 		      </div
 				<div class="col-sm-8 col-sm-offset-2">
 					<div class="row m-b-xxl">
-									<div class="col-sm-3">
-                                                                                
+									<div class="col-sm-9">
+                                                                                <div class="b-l b-2x p-l-xl m-b-lg">
+											<div class="m-b-xl">
 			                                                        <h4 class="font-thin m-b-xl">Work Experience</h4>
 										<p>4 years</p>
+                                                                           </div></div>
 									</div>
 									<div class="col-sm-9">
 										<div class="b-l b-2x p-l-xl m-b-lg">
@@ -121,9 +123,12 @@
 					</div>
 					<div class="row">
 							<div class="col-sm-3">
+                                                            <div class="b-l b-2x p-l-xl m-b-lg">
+											<div class="m-b-xl">
 								<h4 class="font-thin m-b-xl">Education</h4>
 								<p>post graduate</p>
-							</div>
+							    </div>
+                                                        </div></div>
 							<div class="col-sm-9">
 								<div class="b-l b-2x p-l-xl m-b-lg">
 									<div class="m-b-xl">
