--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
 												<h5 class="text-dark m-b-none"> Junior Software Developer <small> at </small> <a class="text-primary" href=""> Comjagat Technologies Limited </a></h5>
 												<p> February 2011 to February 2013</p>
 												<p class="b-l b-light b-dker text-base p-l-sm m-l">
-													...........
-													<a class="small clear">http://</a>
+													 Tech News Responsive HTML 5 Magazine Template
+													<a class="small clear"> https://uicookies.com/downloads/technews-html-technology-news-magazine-template/ </a>
 												</p>
 												<p class="b-l b-light b-dker text-base p-l-sm m-l">
-													........
-													<a class="small clear">http://</a>
+													Computer jagat magazine apk
+													<a class="small clear">  https://m.apkpure.com/computer-jagat/computer_jagat.munzurul </a>
 												</p>
 												
 											</div>
@@ -108,7 +108,7 @@
 												<h5 class="text-dark m-b-none"> Executive <small> at </small> <a class="text-primary" href=""> Banglalion Communication Limited </a></h5>
 												<p> January 2011 to February 2011</p>
 												<p class="b-l b-light b-dker text-base p-l-sm m-l">
-										                        .........
+										                        
 													<a class="small clear">http://</a>
 												</p>
 												<p class="b-l b-light b-dker text-base p-l-sm m-l">
