--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 							<div class="col-sm-9">
 								<div class="b-l b-2x p-l-xl m-b-lg">
 									<div class="m-b-xl">
-										<h5 class="text-dark">Daffodil International University</h5>
+										<h5 class="text-info">Daffodil International University</h5>
 										<p class="b-l b-light b-dker text-base p-l-sm m-l">
 											M.Sc in Computer Science and Engineering 
 											<small class="clear">111-25-199 [2013]</small>
@@ -136,8 +136,18 @@
 										</p>
 									</div>
                                                                         <div class="m-b-xl">
-										<h5 class="text-dark"></h5>
-										
+										<h5 class="text-info">Mirpur Girls Ideal Laboratory Institute</h5>
+										<p class="b-l b-light b-dker text-base p-l-sm m-l">
+											H.S.C in Science
+											<small class="clear">2005</small>
+										</p>
+									</div>
+                                                                        <div class="m-b-xl">
+										<h5 class="text-info">M.D.C Model Institute</h5>
+										<p class="b-l b-light b-dker text-base p-l-sm m-l">
+											S.S.C in Science
+											<small class="clear">2003</small>
+										</p>
 									</div>
 								</div>
 							</div>
