--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<div class="row m-b-xxl">
 									<div class="col-sm-9">
                                                                                 <div class="b-l b-2x p-l-xl m-b-lg">
-											<div class="m-b-xl">
+											<div class="m-b-xl">	<i class="icon-paper-plane text-3x"></i>
 			                                                        <h4 class="font-thin m-b-none">Work Experience</h4>
 										<p>4 years</p>
                                                                            </div></div>
@@ -118,14 +118,14 @@
                                              <div class="col-sm-9">
 				                 <div class="b-l b-2x p-l-xl m-b-lg">
 							<div class="m-b-xl">
-
+                                                           	<i class="icon-paper-plane text-3x"></i>
                                                            <iframe width="560" height="315" src="https://www.youtube.com/embed/Qwupz84zDsA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                                           </div>
                                                          </div>
                                                         </div>
 							<div class="col-sm-3">
                                                             <div class="b-l b-2x p-l-xl m-b-lg">
-											<div class="m-b-xl">
+								<div class="m-b-xl">	<i class="icon-paper-plane text-3x"></i>
 								<h4 class="font-thin m-b-none">Education</h4>
 								<p>post graduate</p>
 							    </div>
