--- a/index.html
+++ b/index.html
@@ -117,10 +117,12 @@
 					<div class="row">
                                              <div class="col-sm-9">
 				                 <div class="b-l b-2x p-l-xl m-b-lg">
-							<div class="m-b-xl">
+							<div class="m-b-xl embed-responsive embed-responsive-16by9">
                                                            	<i class="icon-paper-plane text-3x"></i>
-                                                           <iframe width="560" height="315" src="https://www.youtube.com/embed/Qwupz84zDsA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                                                          </div>
+                                                          
+                                                              <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Qwupz84zDsA" allowfullscreen></iframe>
+                                                          
+                                                        </div>
                                                          </div>
                                                         </div>
 							<div class="col-sm-3">
