--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
 					<div class="row">
                                              <div class="col-sm-9">
 				                 <div class="b-l b-2x p-l-xl m-b-lg">
-							<div class="m-b-xl embed-responsive embed-responsive-16by9">
+							<div class="m-b-xl" >
                                                            	<i class="icon-paper-plane text-3x"></i>
-                                                          
+                                                          //embed-responsive embed-responsive-16by9
                                                               <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Qwupz84zDsA" allowfullscreen></iframe>
                                                           
                                                         </div>
