--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<div class="row m-b-xxl">
 									<div class="col-sm-9">
                                                                                 <div class="b-l b-2x p-l-xl m-b-lg">
-											<div class="m-b-xl">	<i class="icon-paper-plane text-3x"></i>
+											<div class="m-b-xl text-center p-v m-v-xl">	<i class="icon-paper-plane text-3x"></i>
 			                                                        <h4 class="font-thin m-b-none">Work Experience</h4>
 										<p>4 years</p>
                                                                            </div></div>
@@ -117,7 +117,7 @@
 					<div class="row">
                                              <div class="col-sm-9">
 				                 <div class="b-l b-2x p-l-xl m-b-lg">
-							<div class="m-b-xl" >
+							<div class="m-b-xl text-center p-v m-v-xl" >
                                                            	<i class="icon-paper-plane text-3x"></i>
                                                           //embed-responsive embed-responsive-16by9
                                                               <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Qwupz84zDsA" allowfullscreen></iframe>
@@ -127,7 +127,7 @@
                                                         </div>
 							<div class="col-sm-3">
                                                             <div class="b-l b-2x p-l-xl m-b-lg">
-								<div class="m-b-xl">	<i class="icon-paper-plane text-3x"></i>
+								<div class="m-b-xl text-center p-v m-v-xl">	<i class="icon-paper-plane text-3x"></i>
 								<h4 class="font-thin m-b-none">Education</h4>
 								<p>post graduate</p>
 							    </div>
