--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 											<div class="m-b-xl text-center p-v m-v-xl">	<i class="icon-paper-plane text-3x"></i>
 			                                                        <h4 class="font-thin m-b-none">Work Experience</h4>
 										<p>4 years</p>
+                                                                                <div class="line line-lg w-3x b-b b-danger m-auto"></div>
                                                                            </div></div>
 									</div>
 									<div class="col-sm-9">
@@ -121,7 +122,7 @@
                                                            	<i class="icon-paper-plane text-3x"></i>
                                                           //embed-responsive embed-responsive-16by9
                                                               <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Qwupz84zDsA" allowfullscreen></iframe>
-                                                          
+                                                          <div class="line line-lg w-3x b-b b-danger m-auto"></div>
                                                         </div>
                                                          </div>
                                                         </div>
@@ -130,6 +131,7 @@
 								<div class="m-b-xl text-center p-v m-v-xl">	<i class="icon-paper-plane text-3x"></i>
 								<h4 class="font-thin m-b-none">Education</h4>
 								<p>post graduate</p>
+                                                                <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 							    </div>
                                                         </div></div>
 							<div class="col-sm-9">
