--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 									<div class="col-sm-9">
                                                                                 <div class="b-l b-2x p-l-xl m-b-lg">
 											<div class="m-b-xl text-center p-v m-v-xl">	<i class="icon-paper-plane text-3x"></i>
-			                                                        <h4 class="font-thin m-b-none">Work Experience</h4>
+			                                                        <h1 class="font-thin m-b-none">Work Experience</h1>
 										<p>4 years</p>
                                                                                 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
                                                                            </div></div>
@@ -120,7 +120,7 @@
 				                 <div class="b-l b-2x p-l-xl m-b-lg">
 							<div class="m-b-xl text-center p-v m-v-xl" >
                                                            	<i class="icon-paper-plane text-3x"></i>
-                                                          //embed-responsive embed-responsive-16by9
+                                                          <div class="line line-lg w-3x b-b b-danger m-auto"></div>
                                                               <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Qwupz84zDsA" allowfullscreen></iframe>
                                                           <div class="line line-lg w-3x b-b b-danger m-auto"></div>
                                                         </div>
@@ -129,7 +129,7 @@
 							<div class="col-sm-3">
                                                             <div class="b-l b-2x p-l-xl m-b-lg">
 								<div class="m-b-xl text-center p-v m-v-xl">	<i class="icon-paper-plane text-3x"></i>
-								<h4 class="font-thin m-b-none">Education</h4>
+								<h1 class="font-thin m-b-none">Education</h1>
 								<p>post graduate</p>
                                                                 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 							    </div>
