--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 			<div class="row">
                                 <div class="col-sm-8 col-sm-offset-2 text-center p-v m-v-xl">
 		      	<i class="icon-paper-plane text-3x"></i>
+                          <img class="text-center rounded img-thumbnail" src="http://graph.facebook.com/musammat.samina/picture?type=square&width=200&height=200">
 		        <h3 class="text-info">আলহাজ্ব মোঃ আব্দুল খালেক এবং মিসেস সুফিয়া বেগম,বাড়ি ৩৫, রোড ০৩, ব্লক সি, সেকশন ১২, পল্লবী, ঢাকা ১২১৬  </h3>
 		        <p class=""></p>
 		        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
