--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<div class="row">
                                 <div class="b-l b-2x p-l-xl m-b-lg">
 											<div class="m-b-xl text-center p-v m-v-xl">	<i class="icon-paper-plane text-3x"></i>
-			                                                        <img class="text-center rounded img-thumbnail" src=" https://www.facebook.com/photo/?fbid=10228195469016091&set=a.2926549726974">
+			                                                        <img class="rounded" src=" https://www.facebook.com/photo/?fbid=10228195469016091&set=a.2926549726974" alt="Musammat Samina">
 		        <h3 class="text-info">আলহাজ্ব মোঃ আব্দুল খালেক এবং মিসেস সুফিয়া বেগম,বাড়ি ৩৫, রোড ০৩, ব্লক সি, সেকশন ১২, পল্লবী, ঢাকা ১২১৬  </h3>
 		        <p class=""></p>
 		        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
