--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 	    <link rel="stylesheet" href="bower_components/owl-carousel2/dist/assets/owl.carousel.min.css" />
         <link rel="stylesheet" href="bower_components/owl-carousel2/dist/assets/owl.theme.default.min.css" />
 		<link rel="stylesheet" href="dist/css/bootaide.min.css" />
+<script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+
+    <link rel="stylesheet" type="text/css" href="./style.css" />
+    <script type="module" src="./index.js"></script>
+
 	</head>
 	<body>
 		<!--[if lt IE 10]>
@@ -223,7 +228,12 @@
 							</div>
 						</a>
 					</div>
-						
+						<div class="col-md-4">
+<script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
+      defer
+    ></script>
+</div>
 				  
 		    </div>
 		  </div>
