--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
     <link rel="stylesheet" type="text/css" href="./style.css" />
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="map.js"></script>
 
 	</head>
 	<body>
@@ -229,10 +229,7 @@
 						</a>
 					</div>
 						<div class="col-md-4">
-<script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
-      defer
-    ></script>
+
 </div>
 				  
 		    </div>
