--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<link rel="stylesheet" href="dist/css/bootaide.min.css" />
 <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
-    <link rel="stylesheet" type="text/css" href="./style.css" />
-    <script type="module" src="map.js"></script>
+    <link rel="stylesheet" type="text/css" href="dist/map.css" />
+    <script type="module" src="js/map.js"></script>
 
 	</head>
 	<body>
@@ -228,9 +228,19 @@
 							</div>
 						</a>
 					</div>
-						<div class="col-md-4">
+		<!--The div element for the map -->
+    <div id="map" class="col-md-4"></div>
 
-</div>
+    <!-- 
+     The `defer` attribute causes the callback to execute after the full HTML
+     document has been parsed. For non-blocking uses, avoiding race conditions,
+     and consistent behavior across browsers, consider loading using Promises
+     with https://www.npmjs.com/package/@googlemaps/js-api-loader.
+    -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
+      defer
+    ></script>				
 				  
 		    </div>
 		  </div>
