--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<div class="container">
 			<div class="row">
                                 <div class="b-l b-2x p-l-xl m-b-lg">
-											<div class="m-b-xl text-center p-v m-v-xl">	<div class="text-center rounded" style="background-image: url(imgs/samina.jpg);">  </div>
+											<div class="m-b-xl text-center p-v m-v-xl">	<div class="text-center rounded img-bg" style="background-image: url(imgs/samina.jpg);">  </div>
 			                                                         
 		        <h3 class="text-info">আলহাজ্ব মোঃ আব্দুল খালেক এবং মিসেস সুফিয়া বেগম,বাড়ি ৩৫, রোড ০৩, ব্লক সি, সেকশন ১২, পল্লবী, ঢাকা ১২১৬  </h3>
 		        <p class=""></p>
