--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	    <link rel="stylesheet" href="bower_components/owl-carousel2/dist/assets/owl.carousel.min.css" />
         <link rel="stylesheet" href="bower_components/owl-carousel2/dist/assets/owl.theme.default.min.css" />
 		<link rel="stylesheet" href="dist/css/bootaide.min.css" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
 
     <link rel="stylesheet" type="text/css" href="dist/map.css" />
@@ -38,8 +39,9 @@
 							<a class="m-r-sm" href="https://twitter.com/seagirlsabo"><i class="fa fa-twitter"></i></a>
 							<a class="m-r-sm" href="https://facebook.com/musammat.samina"><i class="fa fa-facebook"></i></a>
 							<a class="m-r-sm" href="http://about.me/imsamina"><i class="fa fa-codepen"></i></a>
-							<a class="m-r-sm" href="https://www.linkedin.com/in/musammatsamina-47577222"><i class="fa fa-dribbble"></i></a>
-							<a href="https://github.com/musammatsamina"><i class="fa fa-github"></i></a>
+							<a class="m-r-sm" href="https://www.linkedin.com/in/musammatsamina-47577222"><i class="fa fa-linkedin"></i></a>
+                                                        <a class="m-r-sm" href="https://www.facebook.com/profile.php?id=100075473425112&mibextid=ZbWKwL"><i class="glyphicon glyphicon-envelope"></i></a>
+							<a class="m-r-sm" href="https://musammatsamina.github.io"><i class="fa fa-github"></i></a>
 						</div>
 					</div>
 				</div>
