--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 							<div class="m-b-xl text-center p-v m-v-xl" >
                                                            	<i class="icon-paper-plane text-3x"></i>
                                                           <div class="line line-lg w-3x b-b b-danger m-auto"></div>
-                                                 <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" class="embed-responsive-item" type="text/html" src="https://www.youtube.com/embed/lpR_4ccB0nA?autoplay=1&fs=1&iv_load_policy=3&showinfo=1&rel=1&cc_load_policy=0&start=0&end=0&vq=hd1080" allowfullscreen ></iframe>
+                                                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/lpR_4ccB0nA?autoplay=1&fs=1&iv_load_policy=3&showinfo=1&rel=1&cc_load_policy=0&start=0&end=0&vq=hd1080" allowfullscreen ></iframe>
                                                               
                                                           <div class="line line-lg w-3x b-b b-danger m-auto"></div>
                                                         </div>
