--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 									</div>
 					</div>
 					<div class="row">
-                                             <div class="col-sm-9">
+                                             <div class="col-sm-8 col-sm-offset-2 text-center p-v m-v-xl">
 				                 <div class="b-l b-2x p-l-xl m-b-lg">
 							<div class="m-b-xl text-center p-v m-v-xl" >
                                                            	<i class="icon-paper-plane text-3x"></i>
