--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>musammatsamina.github.io</title>
-		<meta name="description" content="">
+		<meta name="description" content="Musammat Samina">
 		<meta name="viewport" content="width=device-width">
 		<link rel="shortcut icon" href="/favicon.ico">
 
