--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<a class="m-r-sm" href="https://facebook.com/musammat.samina"><i class="fa fa-facebook"></i></a>
 							<a class="m-r-sm" href="http://about.me/imsamina"><i class="fa fa-codepen"></i></a>
 							<a class="m-r-sm" href="https://www.linkedin.com/in/musammatsamina-47577222"><i class="fa fa-linkedin"></i></a>
-                                                        <a class="m-r-sm" href="https://www.facebook.com/profile.php?id=100075473425112&mibextid=ZbWKwL"><i class="fa fa-graduation-cap"></i></a>
+                                                        <a class="m-r-sm" href="https://www.facebook.com/profile.php?id=100075473425112&mibextid=ZbWKwL"><i class="fa fa-star"></i></a>
 							<a class="m-r-sm" href="https://www.github.com/musammatsamina"><i class="fa fa-github"></i></a>
                                                   <a class="m-r-sm" href="https://www.youtube.com/@musammatsamina5939"><i class="fa fa-youtube-play"></i></a>
                                                   <a class="m-r-sm" href="mailto:musammatsamina@gmail.com"><i class="fa fa-envelope-open"></i></a>
