--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                                         </div>
 							<div class="col-sm-3">
                                                             <div class="b-l b-2x p-l-xl m-b-lg">
-								<div class="m-b-xl text-center p-v m-v-xl">	<i class="icon-paper-plane text-3x"></i>
+								<div class="m-b-xl text-center p-v m-v-xl">	<i class="icon-graduation-cap text-3x"></i>
 								<h1 class="font-thin m-b-none">Education</h1>
 								<p>post graduate</p>
                                                                 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
