--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                                         </div>
 							<div class="col-sm-3">
                                                             <div class="b-l b-2x p-l-xl m-b-lg">
-								<div class="m-b-xl text-center p-v m-v-xl">	<i class="icon-graduation-cap text-3x"></i>
+								<div class="m-b-xl text-center p-v m-v-xl">	<i class="icon-paper-plane text-3x"></i>
 								<h1 class="font-thin m-b-none">Education</h1>
 								<p>post graduate</p>
                                                                 <div class="line line-lg w-3x b-b b-danger m-auto"></div>
@@ -250,7 +250,22 @@
 		    </div>
 		  </div>
 		</section>
-
+<section>
+<div class="container">
+				<div class="row p-v m-t-md text-center">
+				
+<div class="owl-carousel owl-theme"> 
+        
+    <div class="item-video" data-merge="1"><a class="owl-video" href="https://www.youtube.com/watch?v=BvNp1NrI03E"></a></div>
+    <div class="item-video" data-merge="2"><a class="owl-video" href="https://www.youtube.com/watch?v=BvNp1NrI03E"></a></div> 
+    <div class="item-video" data-merge="1"><a class="owl-video" href="https://www.youtube.com/watch?v=BvNp1NrI03E"></a></div>
+    <div class="item-video" data-merge="2"><a class="owl-video" href="https://www.youtube.com/watch?v=BvNp1NrI03E"></a></div> 
+    <div class="item-video" data-merge="3"><a class="owl-video" href="https://www.youtube.com/watch?v=BvNp1NrI03E"></a></div>
+    <div class="item-video" data-merge="1"><a class="owl-video" href="https://www.youtube.com/watch?v=0fhoIate4qI"></a></div>
+    <div class="item-video" data-merge="2"><a class="owl-video" href="https://www.youtube.com/watch?v=EF_kj2ojZaE"></a></div> 
+</div> 
+    </div></div>
+</section>
         <section class="separator">
 			<div class="decor-svg">
 				<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
