--- a/index.html
+++ b/index.html
@@ -287,6 +287,14 @@
 				</div>
 			</div>
 		</section>
+<script type="">
+('.owl-carousel').owlCarousel({
+    items: 1,
+    loop: true,
+    video: true,
+    lazyLoad: true
+}); 
+</script>
 		<script src="bower_components/jquery/dist/jquery.min.js"></script>
 		<script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="bower_components/bootstrapvalidator/dist/js/bootstrapValidator.min.js"></script>
