--- a/index.html
+++ b/index.html
@@ -49,6 +49,32 @@
 			</div>
 		</section>
 
+                <section  class="p-v-xl bg-light">
+		    <header class="bg-white navbar-fixed-top box-shadow">
+			<div class="container">
+				<div class="navbar-header">
+					<button class="btn btn-link visible-xs pull-right m-r m-t-sm" type="button" data-toggle="collapse" data-target=".navbar-collapse">
+						<i class="fa fa-bars"></i>
+					</button>
+					<a href="." class="navbar-brand m-r-lg"><img src="img/logo.png" class="m-r-sm hide"><span class="h3 font-bold">Bootaide</span></a>
+				</div>
+				<div class="collapse navbar-collapse">
+					<ul class="nav navbar-nav navbar-right">
+						<li class="hide">
+							<a href=".">Home</a>
+						</li>
+						<li>
+							<a href="compos.html">Compos</a>
+						</li>
+						<li>
+							<a href="contact.html">Contact</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		   </header>
+                </section>
+
 		<section class="separator">
 
 			<div class="decor-svg">
