--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 					<button class="btn btn-link visible-xs pull-right m-r m-t-sm" type="button" data-toggle="collapse" data-target=".navbar-collapse">
 						<i class="fa fa-bars"></i>
 					</button>
-					<a href="." class="navbar-brand m-r-lg"><img src="img/logo.png" class="m-r-sm hide"><span class="h3 font-bold">Bootaide</span></a>
+					<a href="." class="navbar-brand m-r-lg"><img src="img/logo.png" class="m-r-sm hide"><span class="h3 font-bold">Musammat Samina</span></a>
 				</div>
 				<div class="collapse navbar-collapse">
 					<ul class="nav navbar-nav navbar-right">
@@ -64,7 +64,10 @@
 							<a href=".">Home</a>
 						</li>
 						<li>
-							<a href="compos.html">Compos</a>
+							<a href="about.html">About</a>
+						</li>
+                                                <li>
+							<a href="portfolio.html">Portfolio</a>
 						</li>
 						<li>
 							<a href="contact.html">Contact</a>
