--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				</div>
 			</div>
 		   </header>
-		<section class="bg-dark m-v-xxl p-v-xxl">
+		<section class="bg-dark">
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-8 col-sm-offset-2 text-center m-t-lg">
