--- a/about.html
+++ b/about.html
@@ -79,54 +79,12 @@
 		    <div class="row">
 		      <div class="col-sm-8 col-sm-offset-2 text-center p-v m-v-xl">
 		      	<i class="icon-paper-plane text-4x"></i>
-		        <h1 class="text-dark">Magical Work Done</h1>
-		        <p class="">some awesome magical work we've done!</p>
+		        <h1 class="text-dark">Life Journey</h1>
+		        <p class="">some awesome tour i've done!</p>
 		        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
 		      </div> 
 
-		      <div class="col-md-4">
-						<a href='https://eservice.boi.gov.bd'>
-							<div class="item text-center img-bg img-info dker text-white" style="height: 315px; background-image: url(imgs/d14.jpg);">
-								<div class="top w-full p-h-xxl p-v-lg">
-									<h5 class="text-dark">BIDA eService Portal for Investor</h5>
-									<div class="line line-lg b-b b-white w-3x m-auto"></div>
-									<p class="text-dark">
-										The Investor eService is web-based application for investors to receive Visa Recommendation Letter, Visa On arrival letter, Work Permit through online.
-									</p>
-								</div>						
-							</div>
-						</a>
-					</div>
-						<div class="col-md-4">
-						<a href='https://mohascs.org/'>
-							<div class="item text-center img-bg img-warning dker text-white" style="height: 315px; background-image: url(imgs/d0.jpg);">
-								<div class="top w-full p-h-xxl p-v-lg">
-									<h5 class="text-dark">Ministry of Home Affairs</h5>
-									<div class="line line-lg b-b b-white w-3x m-auto"></div>
-									<p class="text-dark">
-										At vero eos et accusamus 
-										et iusto odio dignissimos 
-										ducimus qui blanditiis
-									</p>
-								</div>							
-							</div>
-						</a>
-					</div>
-				<div class="col-md-4">
-						<a href='https://bcsir.eserve.org.bd/'>
-							<div class="item text-center img-bg img-success dker text-white" style="height: 315px; background-image: url(imgs/d14.jpg);">
-								<div class="top w-full p-h-xxl p-v-lg">
-									<h5 class="text-dark">Bangladesh Council of Scientific and Industrial Research</h5>
-									<div class="line line-lg b-b b-white w-3x m-auto"></div>
-									<p class="text-dark">
-										At vero eos et accusamus 
-										et iusto odio dignissimos 
-										ducimus qui blanditiis
-									</p>
-								</div>						
-							</div>
-						</a>
-					</div>
+				
 		<!--The div element for the map -->
     <div id="map" class="col-md-4"></div>
 
