--- a/contact.html
+++ b/contact.html
@@ -86,6 +86,14 @@
 
 				
 		<!--The div element for the map -->
+
+<div class="container-fluid">\n    
+<div class="map-responsive">\n       
+ <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Saudi+Bangladesh+Nepal" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>\n    
+</div>\n
+</div>
+
+
     <div id="map" class="col-md-4"></div>
 
     <!-- 
