--- a/contact.html
+++ b/contact.html
@@ -87,10 +87,10 @@
 				
 		<!--The div element for the map -->
 
-<div class="container-fluid">   
+<div class="col-md-4">   
 <div class="map-responsive">       
  <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&q=Saudi+Bangladesh+Nepal" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>\n    
-</div>\n
+</div>
 </div>
 
 
