--- a/contact.html
+++ b/contact.html
@@ -79,38 +79,21 @@
 		    <div class="row">
 		      <div class="col-sm-8 col-sm-offset-2 text-center p-v m-v-xl">
 		      	<i class="icon-paper-plane text-4x"></i>
-		        <h1 class="text-dark">Contact </h1>
+		        <h1 class="text-dark">Contact</h1>
 		        <p class="">some awesome tour i've done!</p>
 		        <div class="line line-lg w-3x b-b b-danger m-auto"></div>
-		      </div> 
-
-				
-		<!--The div element for the map -->
-
-<div class="col-md-4">   
-<div class="map-responsive">       
- <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&q=Saudi+Bangladesh+Nepal" width="400" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>\n    
-</div>
-</div>
-
-
-    <div id="map" class="col-md-4"></div>
-
-    <!-- 
-     The `defer` attribute causes the callback to execute after the full HTML
-     document has been parsed. For non-blocking uses, avoiding race conditions,
-     and consistent behavior across browsers, consider loading using Promises
-     with https://www.npmjs.com/package/@googlemaps/js-api-loader.
-    -->
-    <script
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB41DRUbKWJHPxaFjMAwdrzWzbVKartNGg&callback=initMap&v=weekly"
-      defer
-    </script>				
+		      </div>			
 				  
 		    </div>
 		  </div>
 		</section>
-
+<section>
+<div class="container">
+   <div class="row p-v m-t-md text-center">
+    <iframe src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Saudi+Bangladesh+Nepal" width="400" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+</div>
+</section>
         <section class="separator">
 			<div class="decor-svg">
 				<svg class="decor" height="100%" preserveAspectRatio="none" version="1.1" viewBox="0 0 100 100" width="100%" xmlns="http://www.w3.org/2000/svg">
