--- a/contact.html
+++ b/contact.html
@@ -90,8 +90,8 @@
 <section>
 <div class="container">
    <div class="row p-v m-t-md text-center">
-    <iframe src="https://www.google.com/maps/embed/v1/place?key=1guqdjlzNbLun3ohxZEcOK4jvsqV3T7JV&ll=23.829900595718968%2C90.36751382883604&z=17&q=Bangladesh" width="400" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
+    <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1guqdjlzNbLun3ohxZEcOK4jvsqV3T7JV&ehbc=2E312F" width="400" height="450"></iframe>
+   </div>
 </div>
 </section>
         <section class="separator">
