--- a/about.html
+++ b/about.html
@@ -87,19 +87,19 @@
 		</section>
 <section>
 <div class="container">
-   <div class="row p-v m-t-md text-center">
+   <div class="row">
 <div class="owl-carousel owl-theme">
-    <div class="item"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
-    <div class="item"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
-    <div class="item"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
-    <div class="item"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
-    <div class="item"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
-    <div class="item"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
-    <div class="item"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
-    <div class="item"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
-    <div class="item"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
-    <div class="item"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
-    <div class="item"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
+    <div class="item5"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
+    <div class="item5"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
+    <div class="item5"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
+    <div class="item5"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
+    <div class="item5"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
+    <div class="item5"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
+    <div class="item5"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
+    <div class="item5"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
+    <div class="item5"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
+    <div class="item5"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
+    <div class="item5"><img src="https://www.w3schools.com/css/img_fjords.jpg" alt=""></div>
 </div>
 
 
