--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-sm-8 col-sm-offset-2 text-center m-t-lg">
+                                                 <img class="thumb-xl img-circle b b-10x b-a-white" src="imgs/musammat_samina.jpg" />
 						<h1 class="h1 font-semi-bold text-danger"> মোসাম্মত সামিনা </br>( مسمت سمين)</h1>
                                                 <h3 class="h3 font-semi-bold text-danger>  MUSAMMAT SAMINA  </h3>
 						<h3 class="m-t-lg l-h-1x text-info">Software Engineer | Programmer | Publisher | Photographer | Traveler </h3>
