--- a/navigation.html
+++ b/navigation.html
@@ -17,6 +17,9 @@
                                                 <li>
 							<a href="portfolio.html">Portfolio</a>
 						</li>
+                                               <li>
+							<a href="story_writing.html">Story Writing</a>
+						</li>
 						<li>
 							<a href="contact.html">Contact</a>
 						</li>
